--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -127,21 +127,21 @@
                     </li >
                 </ul>
             </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>城市联动</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="city.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>三级地区联动</cite>
-                        </a>
-                    </li >
-                </ul>
-            </li>
+            <!--<li>-->
+                <!--<a href="javascript:;">-->
+                    <!--<i class="iconfont">&#xe723;</i>-->
+                    <!--<cite>城市联动</cite>-->
+                    <!--<i class="iconfont nav_right">&#xe697;</i>-->
+                <!--</a>-->
+                <!--<ul class="sub-menu">-->
+                    <!--<li>-->
+                        <!--<a _href="<{:url('admin/City/city')}>">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>三级地区联动</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
+                <!--</ul>-->
+            <!--</li>-->
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe726;</i>
@@ -150,103 +150,103 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="admin-list.html">
+                        <a _href="<{:url('admin/Admin/adminlist')}>">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>管理员列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="admin-role.html">
+                        <a _href="<{:url('admin/Admin/adminrole')}>">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>角色管理</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="admin-cate.html">
+                        <a _href="<{:url('admin/Admin/admincate')}>">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>权限分类</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="admin-rule.html">
+                        <a _href="<{:url('admin/Admin/adminrule')}>">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>权限管理</cite>
                         </a>
                     </li >
                 </ul>
             </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe6ce;</i>
-                    <cite>系统统计</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="echarts1.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>拆线图</cite>
-                        </a>
-                    </li >
-                    <li>
-                        <a _href="echarts2.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>柱状图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts3.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>地图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts4.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>饼图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts5.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>雷达图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts6.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>k线图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts7.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>热力图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts8.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>仪表图</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe6b4;</i>
-                    <cite>图标字体</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a _href="unicode.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>图标对应字体</cite>
-                        </a>
-                    </li>
-                </ul>
-            </li>
+            <!--<li>-->
+                <!--<a href="javascript:;">-->
+                    <!--<i class="iconfont">&#xe6ce;</i>-->
+                    <!--<cite>系统统计</cite>-->
+                    <!--<i class="iconfont nav_right">&#xe697;</i>-->
+                <!--</a>-->
+                <!--<ul class="sub-menu">-->
+                    <!--<li>-->
+                        <!--<a _href="echarts1.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>拆线图</cite>-->
+                        <!--</a>-->
+                    <!--</li >-->
+                    <!--<li>-->
+                        <!--<a _href="echarts2.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>柱状图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts3.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>地图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts4.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>饼图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts5.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>雷达图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts6.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>k线图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts7.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>热力图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                    <!--<li>-->
+                        <!--<a _href="echarts8.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>仪表图</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="javascript:;">-->
+                    <!--<i class="iconfont">&#xe6b4;</i>-->
+                    <!--<cite>图标字体</cite>-->
+                    <!--<i class="iconfont nav_right">&#xe697;</i>-->
+                <!--</a>-->
+                <!--<ul class="sub-menu">-->
+                    <!--<li>-->
+                        <!--<a _href="unicode.html">-->
+                            <!--<i class="iconfont">&#xe6a7;</i>-->
+                            <!--<cite>图标对应字体</cite>-->
+                        <!--</a>-->
+                    <!--</li>-->
+                <!--</ul>-->
+            <!--</li>-->
         </ul>
     </div>
 </div>
@@ -267,7 +267,7 @@
     </div>
 </div>
 <div class="page-content-bg"></div>
-<!-- 右侧主体结束 -->member-edit.html
+<!-- 右侧主体结束member-edit.html -->
 <!-- 中部结束 -->
 <!-- 底部开始 -->
 <{include file="common/footer" /}>
