--- a/application/admin/view/order/order-list.html
+++ b/application/admin/view/order/order-list.html
@@ -86,7 +86,7 @@
             <td>申通物流</td>
             <td>2017-08-17 18:22</td>
             <td class="td-manage">
-              <a title="查看"  onclick="x_admin_show('编辑','<{:usl(\'admin/Order/\')}>')" href="javascript:;">
+              <a title="查看"  onclick="x_admin_show('编辑','<{:url(\'admin/Order/\')}>')" href="javascript:;">
                 <i class="layui-icon">&#xe63c;</i>
               </a>
               <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
