--- a/application/admin/view/member/member-add.html
+++ b/application/admin/view/member/member-add.html
@@ -77,25 +77,18 @@
 
           //监听提交
           form.on('submit(add)', function(data){
-            console.log(data.field);
+            //console.log(data.field);
               $.ajax({
                   type:"POST",
-                  url:"<{url:('admin/Member/memberadd')}>",
+                  url:"<{url:('admin/Member/memberaddres')}>",
                   data:data.field,
                   dataType: "json",
-                  success:function(data){
-                      if(data.code == 200){
-                          //发异步，把数据提交给php
-                          layer.alert("增加成功", {icon: 6},function () {
-                              // 获得frame索引
-                              var index = parent.layer.getFrameIndex(window.name);
-                              //关闭当前frame
-                              parent.layer.close(index);
-                          });
-                          return false;
+                  success:function(dataon){
+                      if(dataon.code == 200){
+                          console.log(123);
                       }else{
-                          console.log(data);
-                          return;
+                          console.log(456);
+
                       }
                   }
               })
